--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-logo: logo_dark.PNG
+logo: logo_dark.png
 description: "Привет! Мы, Никита и Робер, делаем музыку."
 mywork: "Для сотрудничества:"
 mailto: "mailto:starshov.n.a@gmail.com"
