--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: img/logo_dark_crop.png
 description: "Привет! Мы, Роберт и Никита, делаем музыку."
 mywork: "Для сотрудничества:"
 mailto: "mailto:starshov.n.a@gmail.com"
+google_analytics: UA-165620962-1
