--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 logo: img/logo_dark_crop.png
-description: "Привет! Мы, Роберт и Никита, делаем музыку."
+description: "Привет! Мы, Роберт и&nbsp;Никита, делаем музыку."
 mywork: "Для сотрудничества:"
 mailto: "mailto:starshov.n.a@gmail.com"
 google_analytics: UA-165620962-1
