--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 logo: img/logo_dark_crop.png
+title: Wolf Youth | Мы делаем музыку
 description: "Привет! Мы — Роберт и&nbsp;Никита, и&nbsp;делаем мы музыку."
 mywork: "Для сотрудничества:"
 mailto: "mailto:starshov.n.a@gmail.com"
