--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ logo: img/logo_dark_crop.png
 title: Wolf Youth | Мы делаем музыку
 description: "Привет! Мы — Роберт и&nbsp;Никита, и&nbsp;мы&nbsp;делаем&nbsp;музыку."
 mywork: "Для сотрудничества:"
-mailto: "mailto:starshov.n.a@gmail.com"
+mailto: "hello@wolfyouth.ru"
 google_analytics: UA-165620962-1
