--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 logo: img/logo_dark_crop.png
 title: Wolf Youth | Мы делаем музыку
-description: "Привет! Мы — Роберт и&nbsp;Никита, и&nbsp;мы&nbsp;делаем&nbsp;музыку."
-mywork: "Для сотрудничества:"
+description: "Hi there! We are Robert and&nbsp;Niktia, and&nbsp;we&nbsp;are&nbsp;making&nbsp;musik."
+mywork: "Contact us:"
 mailto: "hello@wolfyouth.ru"
 google_analytics: UA-165620962-1
