--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 logo: img/logo_dark_crop.png
-title: Wolf Youth | Мы делаем музыку
-description: "Hi there! We are Robert and&nbsp;Niktia, and&nbsp;we&nbsp;are&nbsp;making&nbsp;musik."
+title: Wolf Youth | We make music
+description: "Hi there! We are Robert and&nbsp;Niktia, and&nbsp;we&nbsp;make&nbsp;music."
 mywork: "Contact us:"
 mailto: "hello@wolfyouth.ru"
 google_analytics: UA-165620962-1
