--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ logo: img/logo_dark_crop.png
 title: Wolf Youth | We make music
 description: "Hi there! We are Robert and&nbsp;Niktia, and&nbsp;we&nbsp;make&nbsp;music."
 mywork: "Contact us:"
-mailto: "hello@wolfyouth.ru"
+mailto: "wolds.raddled.0h@icloud.com"
 google_analytics: UA-165620962-1
